force-app/main/default/objects/Training_Folder__c/Training_Folder__c.object-meta.xml
<CustomObject>
    <label>Training Folder</label>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>