force-app/main/default/objects/Training_Folder__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>60</length>
    <type>Text</type>
    <inlineHelpText>Optional SLDS icon name for the folder chip, e.g. utility:knowledge_base.</inlineHelpText>
</CustomField>