force-app/main/default/objects/Training_Folder__c/fields/Parent_Folder__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder__c</fullName>
    <label>Parent Folder</label>
    <referenceTo>Training_Folder__c</referenceTo>
    <relationshipLabel>Subfolders</relationshipLabel>
    <relationshipName>Subfolders</relationshipName>
    <type>Lookup</type>
</CustomField>